# asistente-ia-evolutivo

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  alembic.ini  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements-virtual-assistant.txt  requirements.txt  verify_installation.sh
app/api/: dependencies.py
app/api/endpoints/: __init__.py  chat.py  files.py  system.py  voice.py
app/core/: config.py  logging.py  security.py
app/gui/: __init__.py  modern_assistant.py
app/models/: database.py  db_models.py  schemas.py
app/services/: email_service.py
app/services/ai/: openai_service.py  voice_service.py
app/services/storage/: file_storage.py  s3_service.py
app/utils/: formatters.py  helpers.py  validators.py
app/worker/: __init__.py  celery.py  tasks.py
